// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with create-react-app 1`] = `
{
  "import/consistent-type-specifier-style": "off",
  "import/default": "warn",
  "import/dynamic-import-chunkname": "warn",
  "import/export": "error",
  "import/exports-last": "off",
  "import/extensions": "off",
  "import/first": "warn",
  "import/group-exports": "off",
  "import/max-dependencies": "off",
  "import/named": "error",
  "import/namespace": "error",
  "import/newline-after-import": "warn",
  "import/no-absolute-path": "off",
  "import/no-amd": "error",
  "import/no-anonymous-default-export": "error",
  "import/no-commonjs": "off",
  "import/no-cycle": "warn",
  "import/no-default-export": "warn",
  "import/no-deprecated": "warn",
  "import/no-duplicates": "warn",
  "import/no-dynamic-require": "warn",
  "import/no-empty-named-blocks": "warn",
  "import/no-extraneous-dependencies": "warn",
  "import/no-import-module-exports": "off",
  "import/no-internal-modules": "off",
  "import/no-mutable-exports": "error",
  "import/no-named-as-default": "off",
  "import/no-named-as-default-member": "off",
  "import/no-named-default": "error",
  "import/no-named-export": "off",
  "import/no-namespace": "error",
  "import/no-nodejs-modules": "off",
  "import/no-relative-packages": "off",
  "import/no-relative-parent-imports": "off",
  "import/no-restricted-paths": "off",
  "import/no-self-import": "error",
  "import/no-unassigned-import": "off",
  "import/no-unresolved": "warn",
  "import/no-unused-modules": "warn",
  "import/no-useless-path-segments": "off",
  "import/no-webpack-loader-syntax": "error",
  "import/order": "off",
  "import/prefer-default-export": "off",
  "import/unambiguous": "off",
}
`;

exports[`with typescript 1`] = `
{
  "import/consistent-type-specifier-style": [
    "warn",
    "prefer-inline",
  ],
  "import/default": "warn",
  "import/dynamic-import-chunkname": "warn",
  "import/export": "off",
  "import/exports-last": "off",
  "import/extensions": "off",
  "import/first": "warn",
  "import/group-exports": "off",
  "import/max-dependencies": "off",
  "import/named": "off",
  "import/namespace": "off",
  "import/newline-after-import": "warn",
  "import/no-absolute-path": "off",
  "import/no-amd": "error",
  "import/no-anonymous-default-export": "error",
  "import/no-commonjs": "off",
  "import/no-cycle": [
    "warn",
    {
      "ignoreExternal": true,
      "maxDepth": 5,
    },
  ],
  "import/no-default-export": "warn",
  "import/no-deprecated": "off",
  "import/no-duplicates": "off",
  "import/no-dynamic-require": "warn",
  "import/no-empty-named-blocks": "warn",
  "import/no-extraneous-dependencies": "warn",
  "import/no-import-module-exports": "off",
  "import/no-internal-modules": "off",
  "import/no-mutable-exports": "error",
  "import/no-named-as-default": "off",
  "import/no-named-as-default-member": "off",
  "import/no-named-default": "error",
  "import/no-named-export": "off",
  "import/no-namespace": "error",
  "import/no-nodejs-modules": "off",
  "import/no-relative-packages": "off",
  "import/no-relative-parent-imports": "off",
  "import/no-restricted-paths": "off",
  "import/no-self-import": "error",
  "import/no-unassigned-import": "off",
  "import/no-unresolved": "off",
  "import/no-unused-modules": "warn",
  "import/no-useless-path-segments": "off",
  "import/no-webpack-loader-syntax": "error",
  "import/order": "off",
  "import/prefer-default-export": "off",
  "import/unambiguous": "off",
}
`;
